--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "axios": "^1.9.0",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
